force-app/main/default/objects/CLQ_County_Assignment__c/CLQ_County_Assignment__c.object-meta.xml
<CustomObject>
    <description>This object links a county with its default district based on the type of Organization/Program</description>
    <label>County Assignment</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>County Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>