force-app/main/default/objects/CLQ_County_Assignment__c/fields/CLQ_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_County__c</fullName>
    <label>County</label>
    <referenceTo>CLQ_County__c</referenceTo>
    <relationshipLabel>County Assignments</relationshipLabel>
    <relationshipName>County_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>