force-app/main/default/objects/CLQ_County_Assignment__c/fields/CLQ_District__c.field-meta.xml
<CustomField>
    <fullName>CLQ_District__c</fullName>
    <label>District</label>
    <referenceTo>CLQ_District__c</referenceTo>
    <relationshipLabel>County Assignments</relationshipLabel>
    <relationshipName>County_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>