force-app/main/default/objects/CLQ_County_Assignment__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>CLQ_County__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>