force-app/main/default/objects/CLQ_County_Assignment__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <formula>CLQ_District__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District</label>
    <type>Text</type>
</CustomField>